@@ -1,7 +1,7 @@
 
 # The R Commander and command logger
 
-# last modified 16 October 2010 by J. Fox
+# last modified 18 May 2011 by J. Fox
 #   slight changes 12 Aug 04 by Ph. Grosjean
 #   changes 21 June 2007 by Erich Neuwirth for Excel support (marked EN)
 #   modified 17 December 2008 by Richard Heiberger  ##rmh
@@ -311,10 +311,20 @@ Commander <- function(){
 			tkfocus(CommanderWindow())
 			return()
 		}
-		command <- paste("fix(", ActiveDataSet(), ")", sep="")
-		logger(command)
-		justDoIt(command)
-		activeDataSet(ActiveDataSet())
+		dsnameValue <- ActiveDataSet()
+		command <- paste("fix(", dsnameValue, ")", sep="")
+		result <- justDoIt(command)
+		result <- as.data.frame(lapply(result, function(x) if (is.character(x)) factor(x) else x))
+		if (class(result)[1] !=  "try-error"){ 
+			assign(dsnameValue, result, envir=.GlobalEnv)
+			logger(command)
+			if (nrow(get(dsnameValue)) == 0){
+				#        	if (eval(parse(text=paste("nrow(", dsnameValue, ")"))) == 0){
+				errorCondition(message=gettextRcmdr("empty data set."))
+				return()
+			}
+			activeDataSet(dsnameValue)
+		}
 		tkwm.deiconify(CommanderWindow())
 		tkfocus(CommanderWindow())
 	}
